@@ -1,15 +1,16 @@
 // domain.usecase.BrandUseCases
 package com.example.emazon.domain.usecase;
 
+import com.example.emazon.common.Constants;
 import com.example.emazon.domain.api.IBrandServicePort;
 import com.example.emazon.domain.exceptions.*;
 import com.example.emazon.domain.model.Brand;
+import com.example.emazon.domain.model.Category;
 import com.example.emazon.domain.spi.IBrandPersistencePort;
 import com.example.emazon.domain.utils.PageCustom;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class BrandUseCases implements IBrandServicePort {
 
@@ -23,7 +24,6 @@ public class BrandUseCases implements IBrandServicePort {
     public void saveBrand(Brand brand) {
         validateBrand(brand);
 
-        // Verificar si el nombre de la marca ya existe
         Optional<Brand> existingBrand = brandPersistencePort.findByName(brand.getName());
         if (existingBrand.isPresent()) {
             throw new BrandAlreadyExistsException();
@@ -32,38 +32,34 @@ public class BrandUseCases implements IBrandServicePort {
         brandPersistencePort.saveBrand(brand);
     }
 
+
+    @Override
+    public List<Brand> findAllBrands() {
+        return brandPersistencePort.findAllBrands();
+    }
+
     @Override
     public PageCustom<Brand> listBrands(int page, int size, String sortOrder) {
         List<Brand> brands = brandPersistencePort.findAllBrands();
 
-        // Sort logic in the domain layer
         List<Brand> sortedBrands = brands.stream()
-                .sorted((b1, b2) -> "asc".equalsIgnoreCase(sortOrder)
+                .sorted((b1, b2) -> Constants.ASC_VALUE.equalsIgnoreCase(sortOrder)
                         ? b1.getName().compareTo(b2.getName())
                         : b2.getName().compareTo(b1.getName()))
-                .collect(Collectors.toList());
+                .toList();
 
         int total = sortedBrands.size();
         List<Brand> paginatedBrands = sortedBrands.stream()
                 .skip((long) page * size)
                 .limit(size)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageCustom<>(paginatedBrands, page, size, total);
     }
 
     private void validateBrand(Brand brand) {
-        if (brand.getName() == null || brand.getName().isEmpty()) {
-            throw new InvalidBrandNameException();
-        }
-        if (brand.getDescription() == null || brand.getDescription().isEmpty()) {
-            throw new InvalidBrandDescriptionException();
-        }
-        if (brand.getName().length() > 50) {
-            throw new BrandNameTooLongException();
-        }
-        if (brand.getDescription().length() > 120) {
-            throw new BrandDescriptionTooLongException();
-        }
+        //ADD VALIDATIONS HERE
+        //P.D MOST OF THEM HAVE BEEN MOVE TO THE DTO TO BE VALIDATED TROUGH JAKARTA
     }
+
 }
